--- a/src/styles/base/_root.scss
+++ b/src/styles/base/_root.scss
@@ -3,10 +3,13 @@
 :root {
   color-scheme: dark;
 
-  --color-bg: hsl(160, 34%, 48%);
+  --color-bg: hsl(0 0% 0% / 0.3);
   --color-text: hsl(0 0% 98%);
-  --color-dim: hsl(0 0% 98% / 0.2);
-  --color-dark: hsl(0 0% 0% / 0.5);
+  --color-text-dim: hsl(0 0% 98% / 0.2);
+  --color-dim: hsl(0 0% 60%);
+  --color-border: hsl(0 0% 98% / 0.3);
+
+  --shadow: 0px 8px 24px var(--color-bg);
 
   --font-family:
     'Inter', system-ui, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji',
