--- a/src/components/Controls/Controls.module.scss
+++ b/src/components/Controls/Controls.module.scss
@@ -11,15 +11,15 @@
     display: inline-flex;
     align-items: center;
     justify-content: center;
+    color: var(--color-dim);
     background-color: transparent;
+
+    @include hover {
+      color: var(--color-text);
+    }
 
     svg {
       @include square(24);
     }
   }
-}
-
-.resetButton,
-.nextButton {
-  color: var(--color-dim);
 }
